*Empty MediaWiki Message*

--- a/Aleksander_kii_weynaa.mw
+++ b/Aleksander_kii_weynaa.mw
@@ -1,5 +1,64 @@
-[[File:Formacion de l'Empèri d'Alexandre lo Grand.png|thumb|center|700px|dagaalki Iskandrun kabir]]
-[[File:Napoli BW 2013-05-16 16-24-01.jpg|700px|thumb|right|Iskanderun kabir]]
+{{About |the ancient king of Macedonia |other uses|Alexander the Great (disambiguation)}}
+{{Infobox royalty
+| name         = Aleksander kii weynaa
+| title        = [[Basileus]] ee [[Macedon]], [[Hegemon]] ah [[League of Corinth|Hellenic League]], [[Shahanshah]] ee [[Faarsi]], [[Fircoon]] oo ah [[Masaaridii hore|Masar]], [[Sayidka Aasiya]]
+| image        = Alexander the Great mosaic.jpg
+| caption      = Alexander oo la dagaallamaya boqorka [[Darius III]] ee [[dagaalka Issus]].
+| succession   = [[Liiska boqoryaasha Makadonia|Boqorka Makadonia]]
+| reign        = 336–323 BC
+| predecessor  = [[Philip II ee Makedon|Philip II]]
+| successor    = {{plainlist|
+* [[Alexander IV ee Makedon|Aleksander IV]]
+* [[Philip III ee Makedonia|Philip III]]}}
+| succession2  = {{plainlist|
+* Strategos autokrator ee Giriigga}}
+| reign2       = 336 BC
+| predecessor2 = Philip II
+| successor2   =
+| succession3  = [[Fircoonka Masar|Fircoonkii Masar]]
+| reign3       = 332–323 BC
+| predecessor3 = [[Darius III]]
+| successor3   = {{plainlist|
+* Alexander IV
+* Philip III}}
+| succession4  = [[List of kings of Persia|King of Persia]]
+| reign4       = 330–323 BC
+| predecessor4 = Darius III
+| successor4   = {{plainlist|
+* Alexander IV
+* Philip III}}
+| succession5  = [[Lord of Asia]]
+| reign5       = 331–323 BC
+| predecessor5 = ''New office''
+| successor5   = {{plainlist|
+* Alexander IV
+* Philip III}}
+| othertitles  =
+| full name    = Alexander III of Macedon
+| native_lang1 = [[Af griik|Griik]]
+| native_lang1_name1 = {{plainlist|
+* {{Unbulleted list|{{lang|grc|Μέγας Ἀλέξανδρος}}{{Cref2|d}}|{{transl|grc|Mégas Aléxandros}}|{{Literal translation|'Great Alexander'|lk=on}}}}
+* {{Unbulleted list|{{lang|grc|Ἀλέξανδρος ὁ Μέγας}}|{{transl|grc|Aléxandros ho Mégas}}|{{Literal translation|'Alexander the Great'}}}}
+}}
+| spouse      = {{Unbulleted list | [[Roxana]] ee [[Bactria]] | [[Stateira II]] ee [[Faarsi]] | [[Parysatis II]] ee [[Faarsi]]}}
+| issue       = [[Alexander IV ee Macedon|Alexander IV]]<br />[[Heracles ee Makedon]] ''(lagu eedeeyay wiil sharci darro ah)''
+| house       = [[Argead]]
+| house-type  = Dynasty
+| father      = [[Philip II of Macedon]]
+| mother      = [[Olympias|Olympias of Epirus]]
+| birth_date  = 20 or 21 July 356 BC
+| birth_place = [[Pella]], [[Macedon]], [[Ancient Greece]]
+| death_date  = 10 or 11 June 323 BC (aged 32)<!-- 32 years, 10 months and 20 days (approx.) -->
+| death_place = [[Babylon]], [[Mesopotamia]]
+| religion    = [[Ancient Greek religion|Greek polytheism]]
+}}
+'''Aleksander kii weynaa'''  ama '''Aleksander III Makedoniya''' ( Noolaa Luuliyo 356 BC - Juun 10 323 BC ) , wuxuu ahaa boqor Giriig oo ka mid ah boqortooyada reer [[Makedoniya]] , wuxuu ahaa xubin ka tirsan boqortooyadii [[Argead]] . Wuxuu ahaa taliyihii Isbahaysiga [[Panhellenic]] ee ka soo horjeeday Boqortooyada [[Achaemenid]] . Wuxuu ku dhashay [[Pella]] , Makedoniya bishii Luulyo ee sannadka 356 BC. Waalidkiis waxay ahaayeen Boqor Philip II ee Makedonia iyo Boqorad Olympiada ee [[Epirus]].
 
 
-iskanderun tirada weyn ee yaabka leh ee europa iyo dunida qadiimiga ah oo leh cudud dhinaca Aasiya waqtiyadii dambe ee taariikhda
+
+
+
+
+
+{{gumud}}
+[[category:Qarnigii 4aad ee Boqortooyada Makedoniya]] [[Category:Aleksander kii weynaa]]
