*Empty MediaWiki Message*

--- a/Aleksander_kii_weynaa.mw
+++ b/Aleksander_kii_weynaa.mw
@@ -1,4 +1,4 @@
-{{About |the ancient king of Macedonia |other uses|Alexander the Great (disambiguation)}}
+{{About |boqorkii qadiimiga ahaa ee Makedoniya|}}
 {{Infobox royalty
 | name         = Aleksander kii weynaa
 | title        = [[Basileus]] ee [[Macedon]], [[Hegemon]] ah [[League of Corinth|Hellenic League]], [[Shahanshah]] ee [[Faarsi]], [[Fircoon]] oo ah [[Masaaridii hore|Masar]], [[Sayidka Aasiya]]
