--- a/Gaaca.mw
+++ b/Gaaca.mw
@@ -58,4 +58,4 @@ Dhismayaasha caaradka ku haya Barxadda qaybtood waxay magac wadaag la yihiin Bar
 ==Tixraac==
 {{reflist}}
 [[Category:Juqraafiga Soomaaliya]]
-[[Category: Bari Soomaaliya]]''''Italic text''''
+[[Category: Bari Soomaaliya]]
