--- a/Gaaca.mw
+++ b/Gaaca.mw
@@ -53,8 +53,9 @@ Waxay ku taal Togga weyn ee [[Baalade]], 20 KM ayeey dhanka koonfureed ka xigtaa
 Gaaca waxay ka mid tahay meelaha ugu caansan ee loo dalxiis tago, waxaana aad u booqda dalxiisayaal Ajaanib & soomaali.
 
 ==Barxadda Gaaca==
-Barxadda Gaaca waxay ku taal Ka soo horjeedka Xarunta Dowladda Hoose ee Magaalada [[Boosaaso]], Jihada Galbeed ayeey Kaa qabaneysaa Marka la joogo Dhismaha Kowaad ee Dowladda Hoose ee Boosaaso, Barxadda Gaaca (Gaaca Square) Waa Fagaaraha Ugu ee Caansan Magaalada Boosaaso, Bartamaha barxadda waxaa ku yaal Aargada Magaalada,  waxay ku taal meel 4 Wado Isugu yimaadaan Waana Goobta kowaad ee dadweynuhu Isu Taggaan Xilliyada Fantasiyaha, Isu soobaxyada, Iidaha IWM.  
+[[Barxadda Gaaca]] waxay ku taal Ka soo horjeedka Xarunta Dowladda Hoose ee Magaalada [[Boosaaso]], Jihada Galbeed ayeey Kaa qabaneysaa Marka la joogo Dhismaha Kowaad ee Dowladda Hoose ee Boosaaso, Barxadda Gaaca (Gaaca Square) Waa Fagaaraha Ugu ee Caansan Magaalada Boosaaso, Bartamaha barxadda waxaa ku yaal Aargada Magaalada,  waxay ku taal meel 4 Wado Isugu yimaadaan Waana Goobta kowaad ee dadweynuhu Isu Taggaan Xilliyada Fantasiyaha, Isu soobaxyada, Iidaha IWM.  
 Dhismayaasha caaradka ku haya Barxadda qaybtood waxay magac wadaag la yihiin Barxadda Sida Dabaqa Gaaca oo ka mida Saraha ugu ku hareeraysan Barxadda.
+
 ==Tixraac==
 {{reflist}}
 [[Category:Juqraafiga Soomaaliya]]
