*Empty MediaWiki Message*

--- a/Gaaca.mw
+++ b/Gaaca.mw
@@ -59,4 +59,5 @@ Dhismayaasha caaradka ku haya Barxadda qaybtood waxay magac wadaag la yihiin Bar
 ==Tixraac==
 {{reflist}}
 [[Category:Juqraafiga Soomaaliya]]
-[[Category: Bari Soomaaliya]]
+[[Category: Boosaaso]]
+[[Category: Bari]]
