*Empty MediaWiki Message*

--- a/Gaaca.mw
+++ b/Gaaca.mw
@@ -1,6 +1,7 @@
 {{Infobox port
 | name = Gaaca
-| image =
+| image =File:1st fall of the Elephant falls, Shillong.jpg|Sawir quruxsan Gaaca  [[Soomaaliya]], 
+
 | imagesize = 250
 | caption = 
 | country = {{flag|Somalia}}
