*Empty MediaWiki Message*

--- a/Gaaca.mw
+++ b/Gaaca.mw
@@ -5,7 +5,7 @@
 | imagesize = 250
 | caption = 
 | country = {{flag|Somalia}}
-| location = 30 KM ka xigta dhanka koonfureed Magaalada [[Boosaaso]]
+| location = 30 KM ka xigta dhanka koonfureed Bari Magaalada [[Boosaaso]]
 | coordinates =
 | operated = 
 | Owner = 
@@ -50,7 +50,7 @@ File:Waterfall Australia - Wasserfall Australien (22819957609).jpg|thumb|Biyo dh
 
 '''Gaaca''', '''Ga'a'''; waa deegaan aad quruxsan oo soo jiidasho leh waxay Isugu jirtaa Beero iyo goob dalxiis  oo dabiici ah  oo leh ilo Biyoodyo aan go'in, Warro biyo jiifeen ah, Biyo dheceeno, Beero,  Biyo qulqulaya oo macaan  iyo  Kaymo waaweyn oo jiq ah oo dalxiiska iyo tamashlahaba ku wanaagsan, Ishana u roon<ref>http://www.somalitalk.com/gaaca/</ref>. Gaaca waa deegaan barwaaqo ah waxaana ku nool Duur joog farabadan oo ay kamid yiihiin ugaadha noocyadeeda kala duwan, Noocyada shimbiraha dalka iyo noocyo badan oo Duur joogta qaybeheeda kale duwan ah.
  
-Waxay ku taal Togga weyn ee [[Baalade]], 20 KM ayeey dhanka koonfureed ka xigtaa magaalada [[Boosaaso]].      
+Waxay ku taal Togga weyn ee [[Baalade]], 30 KM ayeey dhanka koonfureed ka xigtaa magaalada [[Boosaaso]].      
 Gaaca waxay ka mid tahay meelaha ugu caansan ee loo dalxiis tago, waxaana aad u booqda dalxiisayaal Ajaanib & soomaali.
 
 ==Barxadda Gaaca==
