*Empty MediaWiki Message*

--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -3,7 +3,7 @@
 |native_name = ''Dawladda Darawiish''
 |common_name = Daraawiish
 |image_flag = Calan cad Darwiish - White flag Darwiish.png
-|image_coat = Dervish flag.svg
+|image_coat = Sayyid Mohammed Abdullah Hassan.jpeg
 |image_map = 1901 - 1902 Darwiish.png
 |map_caption = Xuduudki Darwiish 1902gii
 |demonym = [[Duubcad]] ama "Bulshada Daraawiish"
