--- a/Abdulkadir_Nur.mw
+++ b/Abdulkadir_Nur.mw
@@ -1,3 +1,4 @@
+[[File:Mr. A. Mohamed Nur.jpg|thumb|A. Mohamed Nur]]
 Abdulkadir Mohamed Nur (Cabduqaadir Maxamed Nur) wuxuu ku dhashay magaalada Muqdishu sanadkii 1985tii. Wuxuu waxbarashadiisa ilaa Dugsi Sare kaga baxay dugsiga Al-Macmuur ee magaalada Muqdisho sanadkii 2007dii. Shahaadada koowaad ee Jaamacadda wuxuu ka qaatay Jaamacadda Ankara isaga oo ku diyaariyay culuumta Xiriirka Caalamiga.
 
 Mudane Abdulkadir wuxuu sanadii 2008dii ka shaqo bilaabay madaxtooyada qaranka ee Villa Soomaaliya asigoo noqday madaxa amniga. 2009kii waxaa uu ku biiray Wasaaradda Arrimaha Dibadda ee Soomaaliya ayadoo loo magacaabay xoghayaha labaad ee Safaaradda Soomaaliya ee dalka Turkiga. Sanadii 2012kii, Mudane Abdulkadir waxaa loo dalacsiiyay xoghaya koowaad ee Safaaradda. Kadibna sanadkii 2015kii waxaa uu noqday qunsulka koowaad. Ugu dambeyn sanadkii 2016kii waxaa uu noqday sii hayaha Safaaradda Soomaaliya ee dalka Turkiga. Guud ahaan mudadii 8dii sano ee uu ka soo shaqeeyay Safaaradda Soomaaliya ee dalka Turkiga, Mudane Abdulkadir waxaa uu kaalin mug leh oo muuqata ka qaatay horumarinta xiriirka iyo iskaashiga Soomaaliya iyo Turkiga iyo sidoo kale taaba gelinta siyaasadda arrimaha dibadda ee Soomaaliya.
