*Empty MediaWiki Message*

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -1,6 +1,7 @@
 {{pp-protected|small=yes}}
 {{Infobox ethnic group|
 |group=Dhulbahante   <br> البهانتة|image= [[File:Reer Daraawiish (Dhulbahante).png|300px]] 
+|flag = Dhulbahante flag.png
 |region1 = {{flagcountry|Soomaaliya}}
 |region3 = {{flagcountry|Itoobiya}}
 |region4 = {{flagcountry|Kenya}}
