*Empty MediaWiki Message*

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -1,7 +1,7 @@
 {{pp-protected|small=yes}}
 {{Infobox ethnic group|
 |group=Dhulbahante   <br> البهانتة|image= [[File:Reer Daraawiish (Dhulbahante).png|300px]] 
-|flag = Dhulbahante flag.png
+|flag = 
 |region1 = {{flagcountry|Soomaaliya}}
 |region3 = {{flagcountry|Itoobiya}}
 |region4 = {{flagcountry|Kenya}}
@@ -10,6 +10,7 @@
 |related-c=[[Majeerteen]],  [[Dishiishe]], [[Warsangali]] iyo [[Harti]] iyo [[Daarood]]
 }}
 {{caddayn u baahan}}
+[[File:Dhulbahante flag.png|thumb|Calanka Dhulbahante]]
 '''Dhulbante''' waa qabiil kamida [[Beelaha Soomaalida|qabaailka Soomaaliyeed]] ee dega waqooyiga iyo galbeedka [[Soomaaliya]], ee ku caan baxday waa qabiilka ee raacay [[Sayyidka]] iyo halganka [[Dawlada Darawiish]]. Dhulbahante waxaa kaloo loo yaqaan ''Reer Daraawiish'', waxayna kasoo jeedaan beel waynta [[Daarood]], dhulbahante waxa uu dagaa gobolada [[Sool]], [[Sanaag]], [[Cayn]] iyo weliba [[kililka shanaad]] ee [[itoobiya]] sida doollo iyo [[wardheer]]. Dhulbahante waxa uu kamid yahay beelaha waawayn ee aragtida ka dhiibta arrimaha Soomaaliya ee saamaynta tooska ah ku leh siyaasadda, iyagoo halgankii xornimo doonka gacan wayn kagaystay. Dhulbahante oo loogu yeedho daraawiish sababtuna ay tahay waxay ahaayee dadkii aas aasay oo hir galiyey dawladii islaamiga ahyd oo kadhisnayd gobolada SSC taasoo ay soomalida ugu yeeraan daraawiishta .
 
 ==Beesha==
