--- a/Harti.mw
+++ b/Harti.mw
@@ -5,6 +5,7 @@
 Harti waxaa lagu naaneysaa harti koombe, waxaana ka mid ah [[Beesha Darawiish]], [[Maxamed harti]]ka [[Axmed harti]]  iyo [[Maxamuud harti]]ga.
 
 ==Daarood==
+[[File:Dhulbahante flag.png|thumb|Calanka Dhulbahante]]
 Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] (gobolada dhexe iyo [[Gedo]]), wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
 Guud ahaan, beesha Daarood waxaa ka farcama reero badan oo ka mid yihiin: [[Absame]], [[Ogaadeen (beel)|Ogaadeen]], [[Harti]] ([[Beesha Darawiish]], [[Dishiishe]],  [[Majeerteen]] iyo [[Warsangali]]), [[Lailkase]], [[Mareexaan]] iyo beelo kale.
 
