--- a/Khaatumo.mw
+++ b/Khaatumo.mw
@@ -1,7 +1,7 @@
 {{Infobox country
 |conventional_long_name = Dowlad Goboleedka Khaatumo ee Soomaaliya
 |common_name = Khatumo
-|image_flag = Flag of Khaatumo State of Somalia.svg   
+|image_flag = Darawiish (khatumo) flag.png 
 |image_coat = 
 |image_map = KhatumoStateloc.PNG
 |national_motto = 
