--- a/Cali_Galayr.mw
+++ b/Cali_Galayr.mw
@@ -26,7 +26,8 @@
 |alma_mater   = [[Boston University]]<br>[[Syracuse University]]<br>[[Harvard University]]
 |religion     = [[Islam]]
 }}
-'''Cali Khaliif Galayr''', waxoo dhashtay 1941dii waxoona ahaa [[Ra'iisul wasaare|ra'iisul wasaaraha]] [[Soomaaliya]] kabilaabato [[Oktoobar]] 8dii 2000 ilaa oktoobar 28 2001. Galayr waxoo lahaa cilmiga dhinaca siyaasadeed iyo dhaqaalaha. waxoona wax ku soo barta jaamacad ku taalo dalka [[Maraykanka]].
+'''Cali Khaliif Galayr''', waxoo dhashtay 1941dii waxoona ahaa [[Ra'iisul wasaare|ra'iisul wasaaraha]] [[Soomaaliya]] kabilaabato [[Oktoobar]] 8dii 2000 ilaa oktoobar 28 2001. Galayr waxoo lahaa cilmiga dhinaca siyaasadeed iyo dhaqaalaha. waxoona wax ku soo barta jaamacad ku taalo dalka [[Maraykanka]]. Ka dib, wuxuu noqday madaxweynka maamulka darawiisheed ee [[Khaatumo]].
+
 == Taariikh nololeedka Galydh ==
 Galyr waxoo ku dhashtay magaalada [[Laascaanood]] sanadka marka oo ahaa 1941.
 waxoona wax barasho ku soo dhameestay, jaamacad ku taalo magaalada [[Boston]] ee dalka mareykanka. Galayr waxoo ka qeeb galay siyaasada Soomaaliya waxii ka danbeeyay 1966dii.
