*Empty MediaWiki Message*

--- a/Cumar_Sharmaarke.mw
+++ b/Cumar_Sharmaarke.mw
@@ -1,6 +1,6 @@
 {{Infobox officeholder
 |name         = Cumar Cabdirashiid Cali Sharmaarke 
-|image        = Omarasharmarke2.jpg|thumb
+|image        = Omarasharmarke2.jpg
 |office       = 13th [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul wasaaraha Soomaaliya]]
 |president    = [[Xasan Sheekh Maxamuud]]<br/>[[Maxamed Cabdulaahi Maxamed]]
 |term_start   = 24 Diseembar 2014
