*Empty MediaWiki Message*

--- a/Macaan.mw
+++ b/Macaan.mw
@@ -1,5 +1,5 @@
 ::''Kani maqaal ku saabsan macaanka. Bogag kale fiiri [[dhadhan]]
-[[File:Зефир бело-розовый.jpg|220px|zefir macaan ruska ]]
+[[File:Зефир бело-розовый.jpg|620px|thumb|zefir macaan ruska ]]
 [[File:Strawberry shortcake.jpg|500px|thumb|macaanku wuxu ka mid yahay dareenka]]
 [[File:Cranberry Coffee Cake, October 2009.jpg|thumb|right|500px|]]
 [[File:Chocolate truffles with peanut butter 002.jpg|500px|thumb|Chocolate truffles with peanut-butter filling]]
