*Empty MediaWiki Message*

--- a/Wikipedia:Contents%2FTOC_navbar.mw
+++ b/Wikipedia:Contents%2FTOC_navbar.mw
@@ -8,7 +8,7 @@
 *[[Wikipedia:Waxyaabaha ku jira/Hawlaha bini aadamka|Hawlaha bini aadamka]]
 *[[Wikipedia:Waxyaabaha ku jira/Xisaab iyo macquul|Xisaabta]]
 *[[Wikipedia:Waxyaabaha ku jira/Cilmiga dabiiciga iyo jirka|Dabiiciga]]
-*[[Wikipedia:Waxyaabaha ku jira/Dadka iyo naftayda|Dadka]]
+*[[Wikipedia:Waxyaabaha ku jira/Dadka iyo aniga naftayda|Dadka]]
 *[[Wikipedia:Waxyaabaha ku jira/Falsafadda iyo fikirka|Falsafadda]]
 *[[Wikipedia:Waxyaabaha ku jira/Nidaamka diinta iyo caqiidada|Diinta]]
 *[[Wikipedia:Waxyaabaha ku jira/Bulshada iyo cilmiga bulshada|Bulshada]]
