--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -10,7 +10,7 @@
 | image_caption                   = 
 | image_flag                      = Somali State original flag.jpg
 | flag_alt                        = 
-| image_seal                      = Somali Region emblem.png
+| image_seal                      = Astaanta DDS.pnj.jpg
 | seal_alt                        = 
 | image_shield                    = 
 | shield_alt                      = 
