--- a/Gabayada_abwaanada_hawiye.mw
+++ b/Gabayada_abwaanada_hawiye.mw
@@ -97,6 +97,7 @@ xaashi cali barre
 * Abwaan Axmad Muudeey
 * Abwaan Aadan Raage (aadan raage miyaa laga rayn karaa)
  cumar huseen caalin ,cumar dhurwaa
+*Aweis A. Ali
 
 == Buugaag ==
 cilmi barrow ceyr 
