--- a/Gabayada_abwaanada_hawiye.mw
+++ b/Gabayada_abwaanada_hawiye.mw
@@ -96,7 +96,7 @@ xaashi cali barre
 * Abwaan Aadan Muudeey
 * Abwaan Axmad Muudeey
 * Abwaan Aadan Raage (aadan raage miyaa laga rayn karaa)
- cumar huseen caalin ,cumar dhurwaa
+*cumar huseen caalin ,cumar dhurwaa
 *Aweis A. Ali
 
 == Buugaag ==
