*Empty MediaWiki Message*

--- a/Faranka_Jabuuti.mw
+++ b/Faranka_Jabuuti.mw
@@ -16,7 +16,7 @@
 | issuing_authority_website = {{URL|www.banque-centrale.dj}}
 }}
 
-
+{{Flag|Djibouti}}
 Faransiiska Jabuuti (Carabi: فرنك) waa lacagta Jabuuti. Nidaamka ISO 4217 waa DJF. Taariikh ahaan, waxaa loo qaybiyay 100 santuuq.Laga soo bilaabo 1884-dii, markii markii la aasaasay hannaanka Faransiiska ee Faransiiska, Faransiiska Faransiisku waxay ku wareegeen dhinaca Rupee ee Hindiya iyo Maria Theresa. Kuwani waxay isku xiran yihiin 2 francs = 1 rupee iyo 4.2 francs = 1 Maria Theresa thaler.
 Laga bilaabo 1908, francs ku wareegsan Jabuuti si sharci ah ayay u taagnaayeen qiimaha Faransiiska Faransiiska. Laga bilaabo 1910, baqshado ayaa la soo saaray ka dib markii ay bangiga Indochina. Rugta Ganacsiga Ganacsiga iyo Ganacsiga Ganacsiga ayaa la soo saaray intii u dhaxaysay 1919 iyo 1922.
 Sanadkii 1948, kharashaadka ugu horreeya ayaa loo soo saaray si khaas ah loogu isticmaalo Jabuuti, magaca Côte Française waa Soomaali. Sanadkii 1949, francisyo madax-bannaan oo Jabuutiyaan ah ayaa yimid markii lacagtii la soo gaabiyey US Dollar lagu qiyaasay 214.392 francs = 1 dollar. Tani waxay ahayd qiimaha uu Faransiiska Faransiisku ku jiray nidaamka Bretton Woods illaa dhowr bilood ka hor. Sidaa awgeed, dhaqaalaha Jabuuti wax saameyn ah kuma yeelanin dib u dhiska Faransiiska Faransiiska.
