--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -248,7 +248,7 @@ Raisulwasaraayaashii Somaliya==
 |-
 !(15)
 |[[Mahdi Guleid]]
-|[[File:Mahdi Mohammed Gulaid - 2020.jpg|thumb|83x83px]]
+|[[File:Mahdi gulaid.jpg|thumb|83x83px]]
 |
 |—
 |25 July 2020
