--- a/Banaadir.mw
+++ b/Banaadir.mw
@@ -54,6 +54,7 @@ habargidir waxaa kaloo jiro qabaa,il kale oo keeno magaalada xoolahq nool iyo ca
 [[Banaadir]] waxaa la isku dhihi jiray qarnigii 19aad [[Magaalo]]oyinka [[Soomaaliya|Soomaaliyeed]] ee ku yaal xeebaha [[Badweynta Hindiya]] laga bilaabo [[Warshiikh]] laguna geeyo magaalada [[Baraawe]]. Waaguu gumaysiga [[Talyaaniga]] koonfurta [[Soomaaliya]] katalin jirey iyo horaantii madaxbanaanida dalka [[Soomaaliya]], [[Banaadir]] waxay ka koobanayd gobolada hadda loo kala yaqaan [[Shabeellaha Dhexe]], [[Shabeellaha Hoose]] iyo [[Banaadir]] balse waxaa la bedelay 1982 markii ay Dawladda Kacaanka bedeshey soohdimaha gobolada Dalka[[Soomaaliya]]. Magaalada muqdishu hada layiraah gobolka banaadir waxay ahayed degmo ka mid ah degmooyimkii uu ka koobnaa Gobolkii Exbanadir sida Warshiikh, Jaziira, Gandarshe, Marka, Barrawe.
 
 =='''' Degmooyinka gobolka Banaadir==
+[[Mahdi gulaid.jpg|thumb|raisulwasaaraha mahdi gulaid]]
 *[[Xamarjajab]]
 *[[Xamarweyne]]
 *[[Shibis]]
