--- a/Siyaasadda_Soomaaliya.mw
+++ b/Siyaasadda_Soomaaliya.mw
@@ -8,6 +8,7 @@ Insurgency|work=Wikileaks|publisher=Wikileaks|location=Langley, By Andrew McGreg
 
 ===Dawladdii Midnimo Qaran===
 ==Sharci dajinta==
+[[File:Mahdi gulaid.jpg|thumb|mahdi gulaid]]
 Xisbiyada
 soomaaliya markaan laba ukala qaadno Waqooyi iyo koonfur waxaa ka kala jira xisbiyo.
 Waqooyiga Soomaaliya (Soomaaliland) Waxay Leedahay Xisbiyo badan sida xisbiga Wadani, Ucid iyo Kulmiye  Oo ka dhisan waqooyiga soomaaliya ee looqayaan somaliland waxaana talada hadda u haaya Xisbiga Kulmiye, dhanka kale Koonfurta soomaaliya waxa Kaloo ka jira Xisbiyo badan Sida: Xisbiga Wadajir,  Xisbiga Nabadda iyo Horumarka, Xisbiga Himilo qaran iyo Xisbiga Nabad iyo Nolol waxaana talada hadda haaya Xisbiga Nabad iyo Nolol, 
