*Empty MediaWiki Message*

--- a/Prem_Tinsulanonda.mw
+++ b/Prem_Tinsulanonda.mw
@@ -1,6 +1,8 @@
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran. Fadlan naga caawi turjumaada.}}
 [[File:Prem_Tinsulanonda_(Cropped).jpg|thumb]]
 '''Prem Tinsulanonda''' ([[Luuqada Thai|Thai]]: เปรม ติณสูลานนท์; 26 Ogosto 1920 - 26 Meey 2019) wuxuu ahaa sarkaal militariga Thai ah, siyaasad ahaan, iyo maamule ah oo soo noqday Raiisel Wasaaraha Thailand laga soo bilaabo 3-dii Maarso 1980-kii illaa 4-tii Ogosto 1988, xilligaas oo lagu qiimeeyey inuu soo afjaray kacdoon wadaaga isla markaana uu sii maamulayo dardargelinta kobaca dhaqaalaha. Isagoo ah gudoomiyaha golaha dhaxe, wuxuu u shaqeeyey Regent of Thailand laga soo bilaabo geeridii Boqorka [[Bhumibol Adulyadej]] 13kii Oktoobar 2016, ilaa iyo 1dii Disembar 2016 ee [[Vajiralongkorn]] inuu noqdo Boqorka. Markuu ahaa 98 jir, Prem wuxuu ahaa Raiisel wasaaraha cimriga dheer ee Thai.
 
 Intii lagu jiray qalalaasaha siyaasadeed ee Thai bartamihii 2000-meeyadii, waxaa lagu eedeeyey ra'iisulwasaarihii xilka laga tuuray [[Thaksin Shinawatra]] iyo taageerayaashiisa in ay maamuli doonaan afgambigii 2006, iyo sidoo kale magacaabidda golaha sharci dejinta afgembiga iyo dowladda ku meel gaarka ah ee [[Surayud Chulanont]]. Ciidamada militariga ee xukunka ka tuuray Thaksin ayaa beeniyay in Prem uu door muhiim ah oo siyaasadeed ku lahaa.
 
 Prem, isaga oo ah Madaxweynaha Golaha Wadaadka, wuxuu dhiirrigeliyay fikradaha King Bhumibol iyo mashaariicda boqornimada, in kasta oo uu mararka qaar isagu isu metelayo inuu yahay codka boqorka. Wuxuu ku booriyay bulshada Thai inay raacaan taladii boqorka isla markaana isaga laftiisu aasaasay dhowr mashruucyo samafal oo la xiriira waxbarashada, xakamaynta daroogada, saboolnimada, iyo midnimada qaran. Qof deggan koonfurta, Prem wuxuu sidoo kale shaqsi ahaan ula dhaqmay isku dayga inuu xaliyo kacdoonka South Thailand.
+{{gumud}}
