*Empty MediaWiki Message*

--- a/Denis_Sassou_Nguesso.mw
+++ b/Denis_Sassou_Nguesso.mw
@@ -1,3 +1,4 @@
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran. Fadlan naga caawi balaarinta.}}
 [[File:Denis Sassou Nguesso 2014.jpg|thumb]]
 '''Denis Sassou Nguesso''' (wuxuu dhashey 23 Noofambar 1943) waa siyaasi reer Kongo ah oo isagu ahaa Madaxweynaha jamhuuriga Kongo ilaa 1997. Wuxuu horey u ahaa Madaxweye 1979 ilaa 1992. Xisbiga Shaqaalaha ee Kongo (PCT) muddo 12 sano ah. Cadaadis ka yimid ilo caalami ah, wuxuu soo saaray siyaasad axsaab badan 1990 ka dibna waxaa laga xayuubiyay awoodaha fulinta shirweynihii qaran ee 1991, isaga oo xafiiska sii hayey isagoo ah madaxa xafladda. Wuxuu u taagnaa sidii murashax doorashadii madaxweynenimada ee 1992 laakiin waa laga adkaaday isagoo kaalinta saddexaad galay.
 
@@ -5,3 +6,4 @@ Sassou Nguesso wuxuu ahaa hogaamiye mucaarad shan sano ka hor inta uusan xukunka
 
 Sassou Nguesso waxaa taageeraya xisbiyo siyaasadeed oo kala duwan, oo ugu muhiimsan PCT. Waa Madaxweynaha Golaha Dhexe ee PCT.
 [[Category:Gumud]]
+{{gumud}}
