*Empty MediaWiki Message*

--- a/Cabdiraxmaan_Faroole.mw
+++ b/Cabdiraxmaan_Faroole.mw
@@ -1,4 +1,4 @@
 '''Cabdiraxman farole''' wuxuu ahaa madaxwaynaha 7aad ee maamul goboleedka puntland. Xilka uu qabtay waxay ahayd 8 Janaayo 2009 ilaa 8 Janaayo 2014	
  
-
+{{gumud}}
 [[Category:Siyaasad]]
