--- a/Xasan_Cali_Khayre.mw
+++ b/Xasan_Cali_Khayre.mw
@@ -1,1 +1,36 @@
-#REDIRECT [[Xasan Khayre]]
+
+{{short description|Raiisul wasaaraha Soomaaliya}}
+{{Infobox officeholder
+| honorific_prefix = [[Mudane]]
+| birth_name = Xasan Cali Khayre
+| image = Hassan Ali.png
+| office = [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul wasaaraha Soomaaliya]]
+| president = [[Maxamed Cabdulaahi Maxamed]]
+| term_start = 1 Maarso 2017 
+| Nationality = Soomaali
+| term_end = 25 Luuliyo 2020
+| predecessor = [[Cumar Cabdirashiid Cali Sharmaarke|Cumar Cabdirashiid Cali<br>Sharmaarke]]
+| successor = 
+| birth_date = 1968
+| birth_place = [[Ceelbuur]], [[Galguduud]], [[Jamhuuriyadda Soomaaliya]]
+| death_date = 
+| death_place = 
+| party = [[Siyaasi madax banaan|ka madax banaan]]
+| alma_mater = [[Jaamacada Oslo]]<br>[[ Heriot-Watt University]]
+}}
+'''Xasan Cali Khayre'''  dhashay 15 Abriil [[1968]], oo loo yaqaan Xasan Khayre<ref>http://www.africanews.com/2018/08/14/eritrea-delegation-in-somalia-to-deepen-bilateral-relations/</ref> waa siyaasi Soomaali,  ahna [[Ra'iisul wasaarahii hore ee soomaaliya|Raiisul Wasaarahii hore]] [[Soomaaliya]] . Waxaa loo magacaabay 23 Febraayo [[2017]],waxaana uu xilka ka dagay 25 July 2020 waxaa u magacaabay Madaxweynaha Soomaaliya [[Maxamed Cabdulaahi Maxamed]]<ref> http://mareeg.com/somali-new-president-appoints-hassan-ali-khaire-as-prime-minister/</ref>, waxaana ansixiyay xubnaha baarlamaankana badankooda 1-da maarso [[2017]].<ref> http://goobjoog.com/english/parliament-unanimously-endorses-hassan-khaire-new-pm|title=Parliament unanimously endorses Hassan Khaire as new PM|publisher=Goobjoog News|date=1 March 2017</ref>, Waxaa u codeysay 231 xildhibaan oo ah dhammaan mudanayaasha fadhiga baarlamaanka<ref>https://www.bbc.com/somali/war-39125689</ref> 
+
+Bishii July 2020 ayay 170 xildhibaan oo ka tirsan golaha shacabka kala noqdeen kalsoonidii, waxaana diiday 8 xildhibaan kaliya.
+
+Khaire wuxuu horey u ahaan jiray madaxa fulinta [[Batrool|batroolka]]. Wuxuu ahaa agaasime gobol oo ka tirsan hay'adda samafalka ee [[Norwegian Refugee Council]] wuxuuna agaasime ka ahaa qeybta afrika shirkadda saliidda ee Ingiriiska [[Soma Oil and Gas]].<ref>http://www.aftenposten.no/verden/Nordmann-ny-statsminister-i-Somalia-615810b.html|title=Nordmann ny statsminister i Somalia|newspaper date=2017-02-23|language=Norwegian}}</ref><ref> http://abcnews.go.com/International/wireStory/somalias-president-appoints-prime-minister-45680284|title=Somalia's new president appoints prime minister|agency=[[Associated Press]]|first=Abdi |last=Guled |publisher=[[ABC News]]|access-date=2017-02-23</ref>
+
+==Taariikh nololeedkiisa==
+Xasan Cali Khayre wuxuu ku dhashay bartamaha Soomaaliya magaalada ceelbuur ee gobolka Galgaduud sanadkii [[1968]],<ref>https://www.togaherer.com/2017/02/23/taariikh-nololeedka-raiisul-wasaare-xasan-cali-khayre/</ref>  Wuxuu waxbarashadiisa ilaa Dugsi Sare kaga baxay Cismaan Geeddi Raage ee magaalada Muqdisho sanadkii [[1986]]dii.<ref> http://somalitalk.com/2017/02/24/taariikh-nololeedka-raiisul-wasaaraha-la-magacaabay/</ref> , Intii u dhexeysay sannadihii 1994-1998 ayuu ka baxay Jaamacadda University of Oslo ee dalka Norway, isagoo ka diyaariyey darajada 1aad ee cilmiga siyaasadda iyo Sociology. Darajada 2aad ee Master-ka wuxuu ka qaatay MBA Jaamacadda Thoroughgoing ee waddanka Skotland sannadkii [[2001]]<ref> https://www.araweelonews.com/warar/waa-kuma-taariikhda-raiisal-wasaare-cusub-ee-soomaaliya-xasan-cali-khayre-iyo-fadeexadaha-lala-xidhiidhiyay/</ref>
+
+Khaire waa nin heysta dhalashada Norway iyo Soomaaliya.<ref> http://www.vg.no/nyheter/utenriks/afrika/norske-hassan-ny-statsminister-i-somalia/a/23932541/|title=Norske Hassan ny statsminister i Somalia|newspaper=[[Verdens Gang]]|access-date=2017-02-24|language=Norwegian</ref> 
+Intii u dhexeysay sanadadii 2002-2005, waxaa u ka shaqeynayay dhinca ganacsiga, sandkii 2006 waxa uu noqday Agaasimaha Xaafiisyadda Soomaaliya iyo Kenya iyo Agaasimaha Geeska Afrika <ref> https://warsom.com/wararka/2017/02/wax-ka-baro-taariikhda-xasan-cali-kheyre-oo-loo-magacaabey-rw-soomaaliya/</ref>
+
+
+
+==Tixraac==
+[[Category:siyaasiinta soomaaliya]]
