*Empty MediaWiki Message*

--- a/Xasan_Cali_Khayre.mw
+++ b/Xasan_Cali_Khayre.mw
@@ -1,7 +1,7 @@
 
 {{short description|Raiisul wasaaraha Soomaaliya}}
 {{Infobox officeholder
-| honorific_prefix = [[Mudane]]
+| honorific_prefix = Mudane
 | birth_name = Xasan Cali Khayre
 | image = Hassan Ali.png
 | office = [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul wasaaraha Soomaaliya]]
