*Empty MediaWiki Message*

--- a/Mahdi_Maxamed_Guuleed.mw
+++ b/Mahdi_Maxamed_Guuleed.mw
@@ -1,4 +1,38 @@
-[[File:Mahdi gulaid.jpg|thumb|gulaid]]
-Mahdi Mohamed Guleid waa raa'isulwasaaraha wadanka Soomaaliya.
+{{short description|Raiisul wasaaraha Soomaaliya}}
+{{Infobox officeholder
+| honorific-prefix    = Mudane
+| name                = Mahdi Maxamed Guuleed "Khadar"<br/>{{small|"مهدي محمد جوليد "خضر}}
+| image               = File:Mahdi gulaid.jpg
+| alt                 = 
+| caption             = Mahdi 2020
+| office              = Ku-simaha [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaaraha Soomaaliya]]<ref>{{cite web|url=https://africa.cgtn.com/2020/07/25/somali-president-appoints-caretaker-prime-minister-after-ali-khaires-ouster/|title=Somali President appoints caretaker Prime Minister after Ali Khaire’s ouster|agency=CGTN|accessdate=July 25, 2020}}</ref>
+| president           = [[Maxamed Cabdulaahi Maxamed]]
+| term_start          = 25 Luulyo 2020
+| term_end            = 
+| predecessor         = [[Xasan Cali Khayre]]
+| successor           = 
+| office1             = Ra'iisul waraarahe ku xigeenka 19aad
+| primeminister1      = [[Xasan Cali Khayre]]
+| president1          = [[Maxamed Cabdulaahi Maxamed]]
+| term_start1         = 21 Maarso 2017
+| term_end1           = 25 Luuliyo 2020
+| predecessor1        = [[Maxamed Cumar Carte]]<ref>{{cite web|url=http://goobjoog.com/english/prime-minister-of-somalia-announces-new-cabinet-with-26-ministers/|title=Prime minister Omar announces 66 cabinet members|accessdate=July 25, 2020}}</ref>
+| successor1          = 
+| birth_name          = Mahdi Maxamed Guuleed
+| birth_date          = 
+| birth_place         = 
+| death_date          = 
+| death_place         = 
+| party               = [[Xisbiga Nabadda iyo Horumarka]]
+| residence           = [[Muqdisho]], Soomaaliya
+| awards              = 
+| children            = 7
+| education           = 
+}}
 
+'''Mahdi Maxamed Guleed "Khadar"''' ({{lang-en|Mahdi Mohammed Gulaid "Khadar"}}; {{lang-ar|مهدي محمد جوليد خضر}}) waa ku-simaha [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaaraha]] [[Soomaaliya|Jamhuuriyada Federaalka Soomaaliya]] kaasi oo horey u ahaa Ra'iisul wasaare ku xigeen wakhtiyadii udhexeeyay 21 Maarso 2017 ilaa 25 Luulyo 2020.<ref>{{cite web|url=http://www.xinhuanet.com/english/2020-07/26/c_139240332.htm|title= Somali president appoints new acting prime minister|accessdate=July 25, 2020}}</ref>
+==Hordhac==
+==Tixraac==
+{{reflist}}
+{{gumud}}
 [[Category:Siyaasi]]
