*Empty MediaWiki Message*

--- a/Xuseen_Caydiid.mw
+++ b/Xuseen_Caydiid.mw
@@ -4,8 +4,8 @@
 {{#if: |
 {{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[File:|200px]]<br />{{{caption|}}}}}
 | colspan="2" style="font-size: larger; text-align: center;" | '''Xuseen Maxamed Faarax Caydiid'''<br />
-Xuseen Maxamed Faarax Caydiid wuxui u dhashay beesha Hawiye, Habargidir Saleemaan, reer Muuse.
-Aabihiis wuxuu ahaa Hogaamiyihii USC, wuxuuna ahaa nin caan ku dhex ah beesha habargidir gaar ahaan, beesha uu ka dhashay ee Saleemaan reer Muuse, Caydiid iyo beeshiisa Saleemaan waxaa dagaal la galay beesha Sacad oo uu hogaaminayay General Cismaan Caato.
+Xuseen Maxamed Faarax Caydiid wuxui u dhashay beesha Hawiye, Habargidir Sacad, reer jalaf.
+Aabihiis wuxuu ahaa Hogaamiyihii USC, wuxuuna ahaa nin caan ku dhex ah beesha habargidir gaar ahaan, beesha uu ka dhashay ee sacad reer jalaf, Caydiid waxaa dagaal la galay maleeshiyo uu hogaaminayay General Cismaan Caato.
 [[File:Xuseen_Caydiid.jpg|250px]]
 |-
 |-
