--- a/Sheekh_Xasan_Barsane.mw
+++ b/Sheekh_Xasan_Barsane.mw
@@ -1,8 +1,1 @@
-'''Sheekh Xasan Sheekh Nuur Sheekh Axmed “ Sheekh Xasan Barsane “''' ( 1853 – 1927 ) Waxuu ahaa abaanduul oo ka mid ahaa ururka [[Urwayni]] ee [[Soomaaliyeed]]. 
-[[File:Sheekh Xasan Barsane.jpeg|right|[[File:Sheekh Xasan Barsane.jpeg|thumb]]]]
-
-== Taariikhda Urwayniya==
-Taariikhda ururka [[Urwayniya]] waxaad ka fiirisa bogga [[Urwayni]].
-
-[[Category:Shaqsiyadaad]]
-[[Category:Taariikhda Soomaalya]]
+#redirect [[Xasan Barsane]]
