*Empty MediaWiki Message*

--- a/Badda_Soomaaliyeed.mw
+++ b/Badda_Soomaaliyeed.mw
@@ -3,7 +3,7 @@
 | native_name = {{lang-so|Badda Soomaaliya}}
 | native_name_lang =
 | other_name =
-| image =[[Horn of africa.jpg|500px|thumb|]]
+| image = Horn of africa.jpg|500px|thumb
 | alt =
 | caption = The Somali Sea, off the eastern coast of Somalia.
 | image_bathymetry =
