*Empty MediaWiki Message*

--- a/Degmada_Feer-feer.mw
+++ b/Degmada_Feer-feer.mw
@@ -1,3 +1,61 @@
+{{About|magaalada|firfir, nooc ka mid ah cuntada|fit-fit}}
+
+{{Infobox settlement
+| official_name                   = Ferfer
+| native_name                     = Feer-feer
+| image_skyline                   = 
+| imagesize                       = 
+| image_caption                   = 
+| image_flag                      = 
+| image_seal                      = 
+| image_map                       = 
+| map_caption                     = 
+| pushpin_map                     = Ethiopia
+| pushpin_label_position          = right
+| pushpin_mapsize                 = 300
+| pushpin_map_caption             = Goobta ee kaga taalo Itoobiya
+| subdivision_type                = [[Dalalka caalamka|Dalka]]
+| subdivision_type1               = [[Gobolada Itoobiya|Gobolka]]
+| subdivision_name                = [[Itoobiya]]
+| subdivision_name1               = [[Somaali galbeed|Gobolka soomaalida]]
+| subdivision_type2               = 
+| subdivision_name2               = 
+| established_title               = 
+| established_date                = 
+| government_type                 = 
+| leader_title                    = 
+| leader_name                     = 
+| area_magnitude                  = 
+| area_total_sq_mi                = 
+| area_total_km2                  = 
+| area_land_sq_mi                 = 
+| area_land_km2                   = 
+| area_urban_sq_mi                = 
+| area_urban_km2                  = 
+| area_metro_km2                  = 
+| area_metro_sq_mi                = 
+| population_as_of                = 2005
+| population_footnotes            = 
+| population_total                = 133,521 (est)
+| population_urban                = 
+| population_metro                = 
+| population_density_sq_mi        = 
+| population_density_km2          = 
+| timezone                        = [[Waqtiga afrikada bari|EAT]]
+| utc_offset                      = +3
+| timezone_DST                    = 
+| utc_offset_DST                  = 
+| coordinates                     = {{coord|05|05|N|45|05|E|region:ET|display=inline,title}}
+| elevation_footnotes             = 
+| elevation_m                     = 177
+| elevation_ft                    = 
+| postal_code_type                = 
+| postal_code                     = 
+| area_code                       = 
+| website                         = 
+| footnotes                       = 
+| name                            = 
+}}
 '''Feer-feer''' ([[Af-Ingiriis]]: [https://en.m.wikipedia.org/wiki/Ferfer# Ferfer]) waa [[Magaalo weyn|magaalo]] caan ah oo ku taala Xadka kala bara labada [[Wadan|wadan ee]] [[Itoobiya]] iyo [[Soomaaliya]]. Waxa ay uqeybsantahay [[Degmo|Degmada]] Fee-feer ee [[DDS|Dawlada Deegaanka Soomaalida]] ee Dalka [[Itoobiya]] iyo [[Degmada feerfeer|Degmada feer-feer]] ee [[Hirshabeelle|Maamul goboleedka Hir-Shabeelle]] ee Dalka [[Soomaaliya]]. Magaalada FeerFeer waxay u dhowdahay gobolka [[Hiiraan]], waxayna dhacdaa dhigta iyo loolka 05°05′N45°05′E. Guud ahaan, magaalada Feer-Feer waxay biyaha badda ka sareeysaa joog dhan qiyaastii 177 mitir.Waana dhul Simman waxoogaay Buuro ah ku hareeraysanyihiin.
 
 == Hordhac:- ==
