*Empty MediaWiki Message*

--- a/Degmada_Feer-feer.mw
+++ b/Degmada_Feer-feer.mw
@@ -1,8 +1,8 @@
 {{About|magaalada|firfir, nooc ka mid ah cuntada|fit-fit}}
 
 {{Infobox settlement
-| official_name                   = Ferfer
-| native_name                     = Feer-feer
+| official_name                   = Feerfeer
+| native_name                     = 
 | image_skyline                   = 
 | imagesize                       = 
 | image_caption                   = 
