*Empty MediaWiki Message*

--- a/Calanka_Khaatumo.mw
+++ b/Calanka_Khaatumo.mw
@@ -1,3 +1,4 @@
+{{Caddayn u baahan}}
 [[File:Darawiish (khatumo) flag.png|right|thumb|calankii khaatumo]]
 Calanka Somaliland]]
 '''Calanka khaatumo''' waxa markii uguhoraysay la isticmaalay calanka [[Khaatumo]] ee xilaga sanadka 2012kii. Waxa uu calanka [[Khaatumo]] ka koobanyahay 
