*Empty MediaWiki Message*

--- a/Template:Xigasho.mw
+++ b/Template:Xigasho.mw
@@ -7,7 +7,7 @@
 | small = {{{small|}}}
 | image = [[File:Question book-new.svg|50x40px|alt=]]
 | issue = Maqaal {{{1|kaan}}} '''malahan [[Wikipedia:Soo bandhigida xogta|xigasho]] ama [[Wikipedia:Xaqiijin|xog xaqiijin ah]]'''.
-| fix   = Fadlan gacan ka geeso [{{fullurl:{{FULLPAGENAME}}|action=edit}} hagaajinta {{{1|maqaalkaan}}}] in aad [[Help:Introduction to referencing with Wiki Markup/1|ku soo darto xigashooyin lagu kalsoonaan karo]]. Qoraalada aan laheen xog caddayn ah waxaa dhici karto in [[Wikipedia:Verifiability#Burden of evidence|laga saaro meeshaan]].<br /><small></small>
+| fix   = Fadlan ka caawi [{{fullurl:{{FULLPAGENAME}}|action=edit}} hagaajinta {{{1|maqaalkaan}}}] in aad [[Help:Introduction to referencing with Wiki Markup/1|ku soo darto xigashooyin lagu kalsoonaan karo]]. Qoraalada aan laheen xog caddayn ah waxaa dhici karto in [[Wikipedia:Verifiability#Burden of evidence|laga saaro meeshaan]].<br /><small></small>
 | removalnotice = yes
 | date  = {{{date|}}}
 | cat   = Maqaalada {{#ifeq:{{{1}}}|qaybta|u baahan tixraac dheeri ah|ilo la'aan}}
